<resources>
    <string name="app_name">Final Fantasy VII</string>
    <string name="character_name">Nama Karakter</string>
    <string name="description">Deskripsi</string>
    <string name="age">Umur</string>
    <string name="home">Tempat Tinggal</string>
    <string name="affiliation">Afiliasi</string>
    <string name="race">Ras</string>
    <string name="gender">Gender</string>
    <string name="height">Tinggi</string>
    <string name="hair_color">Warna Rambut</string>
    <string name="eye_color">Warna Mata</string>
    <string name="blood_type">Golongan Darah</string>
    <string name="weapon">Senjata</string>
    <string name="occupation">Pekerjaan</string>
    <string name="age1">Umur</string>
    <string name="occupation1">Pekerjaan</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="email">rifqi.lukmansyah@mhs.itenas.ac.id</string>
    <string name="about_app_title">About App</string>
    <string name="about_app_description">Final Fantasy VII Wiki</string>
    <string name="Final_Fantasy_VII"> https://finalfantasy.fandom.com/wiki/Final_Fantasy_VII_Rebirth </string>
    <string name="author">Rifqi Lukmansyah</string>
    <string name="back">back</string>
    <string name="share">share</string>
    <string name="resource">Resource</string>
    <string name="about_page">About Page</string>
    <string name="title">Final Fantasy VII Rebirth</string>
    <string name="developers">Developers</string>
    <string name="publisher">Publisher</string>
    <string name="genres">Genre(s)</string>
    <string name="realease_dates">Realease Dates</string>
    <string name="game_modes">Game Modes</string>
    <string name="rating">Rating</string>
    <string name="platforms">Platforms</string>
    <string name="content_developers">Square Enix Creative Business Unit I)</string>
    <string name="content_publisher">Square Enix</string>
    <string name="content_genres">Action role-playing game</string>
    <string name="content_realease_dates">February 29, 2024</string>
    <string name="content_game_modes">Single player</string>
    <string name="content_rating">ESRB: Teen Teen</string>
    <string name="content_platforms">PlayStation 5</string>
    <string name="todo">TODO</string>
    <string-array name="data_name">
        <item>Cloud Strife</item>
        <item>Tifa Lockhart</item>
        <item>Aerith Gainsborough</item>
        <item>Barret Wallace</item>
        <item>Red XIII</item>
        <item>Zack Fair</item>
        <item>Cait Sith</item>
        <item>Vincent Valentine</item>
        <item>Sephiroth</item>
        <item>Jessie Rasberry</item>
        <item>Yuffie Kisaragi</item>
    </string-array>
    <string-array name="data_home">
        <item>Nibelheim</item>
        <item>Nibelheim</item>
        <item>Icicle Inn</item>
        <item>Corel</item>
        <item>Cosmo Canyon</item>
        <item>Gongaga Village</item>
        <item>UNKNOWN</item>
        <item>UNKNOWN</item>
        <item>Nibelheim</item>
        <item>Midgar (Sector 7 slums)</item>
        <item>Wutai</item>
    </string-array>
    <string-array name="data_affiliation">
        <item>Avalanche</item>
        <item>Avalanche</item>
        <item>Avalanche</item>
        <item>Avalanche</item>
        <item>Avalanche</item>
        <item>Shinra Electric Power Company</item>
        <item>Avalanche</item>
        <item>UNKNOWN</item>
        <item>Shinra Electric Power Company</item>
        <item>Avalanche</item>
        <item>Avalanche</item>
    </string-array>
    <string-array name="data_race">
        <item>Human</item>
        <item>Human</item>
        <item>Half-Cetra/human</item>
        <item>Human</item>
        <item>Red XIII</item>
        <item>Robot</item>
        <item>Human</item>
        <item>Human</item>
        <item>Human</item>
        <item>Human</item>
        <item>Human</item>
    </string-array>
    <string-array name="data_gender">
        <item>Male</item>
        <item>Female</item>
        <item>FeMale</item>
        <item>Male</item>
        <item>Male</item>
        <item>Male</item>
        <item>Unknown</item>
        <item>Male</item>
        <item>Male</item>
        <item>Female</item>
        <item>Female</item>
    </string-array>
    <string-array name="data_height">
        <item>173 cm</item>
        <item>167 cm</item>
        <item>163 cm</item>
        <item>197 cm</item>
        <item>120 cm</item>
        <item>185 cm</item>
        <item>100 cm</item>
        <item>184 cm</item>
        <item>197 cm</item>
        <item>160 cm</item>
        <item>160 cm</item>
    </string-array>
    <string-array name="data_hair_color">
        <item>Blond</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Black</item>
        <item>fur</item>
        <item>Black</item>
        <item>Black</item>
        <item>Black</item>
        <item>Silver</item>
        <item>Brown</item>
        <item>Black</item>
    </string-array>
    <string-array name="data_eye_color">
        <item>Blue (Light green mako glow)</item>
        <item>Red</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Ochre</item>
        <item>Blue (Light green glow) "mako eyes"</item>
        <item>Cat</item>
        <item>Red (original continuity) Red and gold (Remake trilogy)</item>
        <item>Bright Cyan with slit cat-like pupils</item>
        <item>Brown</item>
        <item>Dark Brown</item>
    </string-array>
    <string-array name="data_blood_type">
        <item>AB</item>
        <item>B</item>
        <item>O</item>
        <item>O</item>
        <item>Unknown</item>
        <item>O</item>
        <item>Unknown</item>
        <item>A</item>
        <item>Unknown</item>
        <item>O</item>
        <item>A</item>
    </string-array>
    <string-array name="data_weapon">
        <item>Broadswords</item>
        <item>Knuckles</item>
        <item>Staves</item>
        <item>Gun-arms</item>
        <item>Headdresses</item>
        <item>Broadswords</item>
        <item>Megaphones</item>
        <item>Guns</item>
        <item>Masamune</item>
        <item>Bomb</item>
        <item>Shuriken</item>
    </string-array>
</resources>